# atm-state-machine

./: .gitignore  README.md  atm-state-machine.cabal  package.yaml  stack.yaml
src/: ATM.hs  ATM.idr  ATM1.hs  ATM2.hs  ATMCmd.hs  Main.hs
